<resources>

    <string name="app_name">Bolyde</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_support">Support</string>
    <string name="title_activity_model_boat">BolydeActivity</string>
    <string name="sensitivityX">Sensitivity X</string>
    <string name="sensitivityY">Sensitivity Y</string>
    <string name="url">URL</string>
    <string name="post">Post</string>
    <string name="get">Get</string>
    <string name="btnPost">Post</string>
    <string name="btnGet">Get</string>
    <string name="txtBuiltBy">This app was built by</string>
    <string name="txtInteroberlin">#tt Interoberlin</string>
    <string name="txtFlo">Florian Schwanz</string>
    <string name="txtJulian">Julian Weißgerber</string>
    <string name="txtMatthias">Matthias Bock</string>
    <string name="txtSendMail">Send Mail</string>
    <string name="menu_log">Log</string>
    <string name="txtX">X</string>
    <string name="txtY">Y</string>
    <string name="txtVersion">VERSION</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnSave">Save</string>
    <string name="logBuffer">Log Buffer</string>
    <string name="btnRefresh">Refresh</string>
    <string name="cbAutoRefresh">Auto Refresh</string>
    <string-array name="loglevel">
        <item >TRACE</item>
        <item >DEBUG</item>
        <item >INFO</item>
        <item >WARN</item>
        <item >ERROR</item>
        <item >FATAL</item>
    </string-array>
        <string name="orientation">Orientation</string>
        <string name="frequency">Frequency</string>

</resources>