<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLogBuffer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logBuffer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etLogBuffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvSensitivityX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensitivityX"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/sbSensitivityX"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvSensitivityY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensitivityY"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <SeekBar
        android:id="@+id/sbSensitivityY"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvUrl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textUri" />

    <TextView
        android:id="@+id/tvFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frequency"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/etFrequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <CheckBox
        android:id="@+id/cbPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/post" />
    
        <CheckBox
        android:id="@+id/cbGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="155dp"
            android:layout_height="wrap_content"
            android:text="@string/btnCancel" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSave" />
    </LinearLayout>

</LinearLayout>